feat: add deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,10 @@ node_js:
   - "10"
 install: yarn
 script: yarn electron:build-w
+deploy:
+  provider: releases
+  api_key: "f5c2fb3414854741e17832f61f2de6824964227a"
+  file: dist_electron/*
+  skip_cleanup: true
+  on:
+    tags: true
